http://java.net/jira/browse/JAVASERVERFACES_SPEC_PUBLIC-1111
on https://svn.java.net/svn/mojarra~svn/branches/SPEC_1111_PROTOTYPE_BRANCH

svn merge -r 10605:10650 https://svn.java.net/svn/mojarra~svn/trunk



git-svn-id: https://svn.java.net/svn/mojarra~svn/branches/SPEC_1111_PROTOTYPE_BRANCH@10651 761efcf2-d34d-6b61-9145-99dcacc3edf1